tests/baselines/reference/implicitAnyInAmbientDeclaration2.d.errors.txt
==== tests/cases/compiler/implicitAnyInAmbientDeclaration2.d.ts (9 errors) ====
    declare function foo(x);  // this should be an error
    ~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
                         ~
!!! error TS7006: Parameter 'x' of 'foo' implicitly has an 'any' type.
    declare var bar;  // this should be be an erro
                ~~~
!!! error TS7005: Variable 'bar' implicitly has an 'any' type.
    declare class C {
        public publicMember;  // this should be an error
        ~~~~~~~~~~~~~~~~~~~~
!!! error TS7005: Variable 'publicMember' implicitly has an 'any' type.
        private privateMember;  // this should not be an error
    
        public publicFunction(x);  // this should be an error
        ~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS7010: 'publicFunction', which lacks return-type annotation, implicitly has an 'any' return type.
                              ~
!!! error TS7006: Parameter 'x' of 'publicFunction' implicitly has an 'any' type.
        private privateFunction(privateParam);  // this should not be an error
        private constructor(privateParam);  // this should not be an error
        ~~~~~~~
!!! error TS1089: 'private' modifier cannot appear on a constructor declaration.
                            ~~~~~~~~~~~~
!!! error TS7006: Parameter 'privateParam' of 'C' implicitly has an 'any' type.
    }
    
    declare class D {
        public constructor(publicConsParam, int: number);  // this should be an error
                           ~~~~~~~~~~~~~~~
!!! error TS7006: Parameter 'publicConsParam' of 'D' implicitly has an 'any' type.
    }